--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\RafaelRaiserQSOFT\\AppData\\Local\\Temp\\ipykernel_3964\\4080736814.py:1: DeprecationWarning: \n",
+      "C:\\Users\\RafaelRaiserQSOFT\\AppData\\Local\\Temp\\ipykernel_14076\\4080736814.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -72,6 +72,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>obj_ID</th>\n",
        "      <th>alpha</th>\n",
        "      <th>delta</th>\n",
        "      <th>u</th>\n",
@@ -79,25 +80,22 @@
        "      <th>r</th>\n",
        "      <th>i</th>\n",
        "      <th>z</th>\n",
+       "      <th>run_ID</th>\n",
+       "      <th>rerun_ID</th>\n",
+       "      <th>cam_col</th>\n",
+       "      <th>field_ID</th>\n",
+       "      <th>spec_obj_ID</th>\n",
        "      <th>class</th>\n",
        "      <th>redshift</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>obj_ID</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>plate</th>\n",
+       "      <th>MJD</th>\n",
+       "      <th>fiber_ID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1237660961327743232</th>\n",
+       "      <th>0</th>\n",
+       "      <td>1.237661e+18</td>\n",
        "      <td>135.689107</td>\n",
        "      <td>32.494632</td>\n",
        "      <td>23.87882</td>\n",
@@ -105,11 +103,20 @@
        "      <td>20.39501</td>\n",
        "      <td>19.16573</td>\n",
        "      <td>18.79371</td>\n",
+       "      <td>3606</td>\n",
+       "      <td>301</td>\n",
+       "      <td>2</td>\n",
+       "      <td>79</td>\n",
+       "      <td>6.543777e+18</td>\n",
        "      <td>GALAXY</td>\n",
        "      <td>0.634794</td>\n",
+       "      <td>5812</td>\n",
+       "      <td>56354</td>\n",
+       "      <td>171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1237664879951151360</th>\n",
+       "      <th>1</th>\n",
+       "      <td>1.237665e+18</td>\n",
        "      <td>144.826101</td>\n",
        "      <td>31.274185</td>\n",
        "      <td>24.77759</td>\n",
@@ -117,11 +124,20 @@
        "      <td>22.58444</td>\n",
        "      <td>21.16812</td>\n",
        "      <td>21.61427</td>\n",
+       "      <td>4518</td>\n",
+       "      <td>301</td>\n",
+       "      <td>5</td>\n",
+       "      <td>119</td>\n",
+       "      <td>1.176014e+19</td>\n",
        "      <td>GALAXY</td>\n",
        "      <td>0.779136</td>\n",
+       "      <td>10445</td>\n",
+       "      <td>58158</td>\n",
+       "      <td>427</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1237660961330430208</th>\n",
+       "      <th>2</th>\n",
+       "      <td>1.237661e+18</td>\n",
        "      <td>142.188790</td>\n",
        "      <td>35.582444</td>\n",
        "      <td>25.26307</td>\n",
@@ -129,11 +145,20 @@
        "      <td>20.60976</td>\n",
        "      <td>19.34857</td>\n",
        "      <td>18.94827</td>\n",
+       "      <td>3606</td>\n",
+       "      <td>301</td>\n",
+       "      <td>2</td>\n",
+       "      <td>120</td>\n",
+       "      <td>5.152200e+18</td>\n",
        "      <td>GALAXY</td>\n",
        "      <td>0.644195</td>\n",
+       "      <td>4576</td>\n",
+       "      <td>55592</td>\n",
+       "      <td>299</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1237663478724297984</th>\n",
+       "      <th>3</th>\n",
+       "      <td>1.237663e+18</td>\n",
        "      <td>338.741038</td>\n",
        "      <td>-0.402828</td>\n",
        "      <td>22.13682</td>\n",
@@ -141,11 +166,20 @@
        "      <td>21.61162</td>\n",
        "      <td>20.50454</td>\n",
        "      <td>19.25010</td>\n",
+       "      <td>4192</td>\n",
+       "      <td>301</td>\n",
+       "      <td>3</td>\n",
+       "      <td>214</td>\n",
+       "      <td>1.030107e+19</td>\n",
        "      <td>GALAXY</td>\n",
        "      <td>0.932346</td>\n",
+       "      <td>9149</td>\n",
+       "      <td>58039</td>\n",
+       "      <td>775</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1237680272041378048</th>\n",
+       "      <th>4</th>\n",
+       "      <td>1.237680e+18</td>\n",
        "      <td>345.282593</td>\n",
        "      <td>21.183866</td>\n",
        "      <td>19.43718</td>\n",
@@ -153,29 +187,42 @@
        "      <td>16.49747</td>\n",
        "      <td>15.97711</td>\n",
        "      <td>15.54461</td>\n",
+       "      <td>8102</td>\n",
+       "      <td>301</td>\n",
+       "      <td>3</td>\n",
+       "      <td>137</td>\n",
+       "      <td>6.891865e+18</td>\n",
        "      <td>GALAXY</td>\n",
        "      <td>0.116123</td>\n",
+       "      <td>6121</td>\n",
+       "      <td>56187</td>\n",
+       "      <td>842</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          alpha      delta         u         g         r  \\\n",
-       "obj_ID                                                                     \n",
-       "1237660961327743232  135.689107  32.494632  23.87882  22.27530  20.39501   \n",
-       "1237664879951151360  144.826101  31.274185  24.77759  22.83188  22.58444   \n",
-       "1237660961330430208  142.188790  35.582444  25.26307  22.66389  20.60976   \n",
-       "1237663478724297984  338.741038  -0.402828  22.13682  23.77656  21.61162   \n",
-       "1237680272041378048  345.282593  21.183866  19.43718  17.58028  16.49747   \n",
+       "         obj_ID       alpha      delta         u         g         r  \\\n",
+       "0  1.237661e+18  135.689107  32.494632  23.87882  22.27530  20.39501   \n",
+       "1  1.237665e+18  144.826101  31.274185  24.77759  22.83188  22.58444   \n",
+       "2  1.237661e+18  142.188790  35.582444  25.26307  22.66389  20.60976   \n",
+       "3  1.237663e+18  338.741038  -0.402828  22.13682  23.77656  21.61162   \n",
+       "4  1.237680e+18  345.282593  21.183866  19.43718  17.58028  16.49747   \n",
        "\n",
-       "                            i         z   class  redshift  \n",
-       "obj_ID                                                     \n",
-       "1237660961327743232  19.16573  18.79371  GALAXY  0.634794  \n",
-       "1237664879951151360  21.16812  21.61427  GALAXY  0.779136  \n",
-       "1237660961330430208  19.34857  18.94827  GALAXY  0.644195  \n",
-       "1237663478724297984  20.50454  19.25010  GALAXY  0.932346  \n",
-       "1237680272041378048  15.97711  15.54461  GALAXY  0.116123  "
+       "          i         z  run_ID  rerun_ID  cam_col  field_ID   spec_obj_ID  \\\n",
+       "0  19.16573  18.79371    3606       301        2        79  6.543777e+18   \n",
+       "1  21.16812  21.61427    4518       301        5       119  1.176014e+19   \n",
+       "2  19.34857  18.94827    3606       301        2       120  5.152200e+18   \n",
+       "3  20.50454  19.25010    4192       301        3       214  1.030107e+19   \n",
+       "4  15.97711  15.54461    8102       301        3       137  6.891865e+18   \n",
+       "\n",
+       "    class  redshift  plate    MJD  fiber_ID  \n",
+       "0  GALAXY  0.634794   5812  56354       171  \n",
+       "1  GALAXY  0.779136  10445  58158       427  \n",
+       "2  GALAXY  0.644195   4576  55592       299  \n",
+       "3  GALAXY  0.932346   9149  58039       775  \n",
+       "4  GALAXY  0.116123   6121  56187       842  "
       ]
      },
      "execution_count": 3,
@@ -184,10 +231,9 @@
     }
    ],
    "source": [
-    "cols2read=['alpha','delta','u','g','r','i','z','redshift','obj_ID','class']\n",
+    "#cols2read=['alpha','delta','u','g','r','i','z','redshift','obj_ID','class']\n",
     "\n",
-    "data_raw=pd.read_csv('artifacts/data_ingestion/data.csv',usecols=cols2read,dtype={'obj_ID':str})\n",
-    "data_raw.set_index('obj_ID',inplace=True)\n",
+    "data_raw=pd.read_csv('artifacts/data_ingestion/data.csv')\n",
     "data_raw.head()"
    ]
   },
@@ -201,21 +247,30 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 100000 entries, 1237660961327743232 to 1237661151378801152\n",
-      "Data columns (total 9 columns):\n",
-      " #   Column    Non-Null Count   Dtype  \n",
-      "---  ------    --------------   -----  \n",
-      " 0   alpha     100000 non-null  float64\n",
-      " 1   delta     100000 non-null  float64\n",
-      " 2   u         100000 non-null  float64\n",
-      " 3   g         100000 non-null  float64\n",
-      " 4   r         100000 non-null  float64\n",
-      " 5   i         100000 non-null  float64\n",
-      " 6   z         100000 non-null  float64\n",
-      " 7   class     100000 non-null  object \n",
-      " 8   redshift  100000 non-null  float64\n",
-      "dtypes: float64(8), object(1)\n",
-      "memory usage: 7.6+ MB\n"
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column       Non-Null Count   Dtype  \n",
+      "---  ------       --------------   -----  \n",
+      " 0   obj_ID       100000 non-null  float64\n",
+      " 1   alpha        100000 non-null  float64\n",
+      " 2   delta        100000 non-null  float64\n",
+      " 3   u            100000 non-null  float64\n",
+      " 4   g            100000 non-null  float64\n",
+      " 5   r            100000 non-null  float64\n",
+      " 6   i            100000 non-null  float64\n",
+      " 7   z            100000 non-null  float64\n",
+      " 8   run_ID       100000 non-null  int64  \n",
+      " 9   rerun_ID     100000 non-null  int64  \n",
+      " 10  cam_col      100000 non-null  int64  \n",
+      " 11  field_ID     100000 non-null  int64  \n",
+      " 12  spec_obj_ID  100000 non-null  float64\n",
+      " 13  class        100000 non-null  object \n",
+      " 14  redshift     100000 non-null  float64\n",
+      " 15  plate        100000 non-null  int64  \n",
+      " 16  MJD          100000 non-null  int64  \n",
+      " 17  fiber_ID     100000 non-null  int64  \n",
+      "dtypes: float64(10), int64(7), object(1)\n",
+      "memory usage: 13.7+ MB\n"
      ]
     }
    ],
@@ -231,15 +286,24 @@
     {
      "data": {
       "text/plain": [
-       "alpha       0\n",
-       "delta       0\n",
-       "u           0\n",
-       "g           0\n",
-       "r           0\n",
-       "i           0\n",
-       "z           0\n",
-       "class       0\n",
-       "redshift    0\n",
+       "obj_ID         0\n",
+       "alpha          0\n",
+       "delta          0\n",
+       "u              0\n",
+       "g              0\n",
+       "r              0\n",
+       "i              0\n",
+       "z              0\n",
+       "run_ID         0\n",
+       "rerun_ID       0\n",
+       "cam_col        0\n",
+       "field_ID       0\n",
+       "spec_obj_ID    0\n",
+       "class          0\n",
+       "redshift       0\n",
+       "plate          0\n",
+       "MJD            0\n",
+       "fiber_ID       0\n",
        "dtype: int64"
       ]
      },
@@ -260,7 +324,7 @@
     {
      "data": {
       "text/plain": [
-       "(100000, 9)"
+       "(100000, 18)"
       ]
      },
      "execution_count": 6,
@@ -280,7 +344,10 @@
     {
      "data": {
       "text/plain": [
-       "Index(['alpha', 'delta', 'u', 'g', 'r', 'i', 'z', 'class', 'redshift'], dtype='object')"
+       "Index(['obj_ID', 'alpha', 'delta', 'u', 'g', 'r', 'i', 'z', 'run_ID',\n",
+       "       'rerun_ID', 'cam_col', 'field_ID', 'spec_obj_ID', 'class', 'redshift',\n",
+       "       'plate', 'MJD', 'fiber_ID'],\n",
+       "      dtype='object')"
       ]
      },
      "execution_count": 7,
@@ -390,7 +457,6 @@
     "            \n",
     "            for col in all_cols:\n",
     "                if col not in all_schema:\n",
-    "                    print(col)\n",
     "                    validation_status = False\n",
     "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
     "                        f.write(f\"Validation status: {validation_status}\")\n",
@@ -414,11 +480,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-02-15 11:20:10,049: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-02-15 11:20:10,051: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-02-15 11:20:10,054: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-02-15 11:20:10,056: INFO: common: created directory at: artifacts]\n",
-      "[2024-02-15 11:20:10,057: INFO: common: created directory at: artifacts/data_validation]\n"
+      "[2024-02-15 11:25:07,514: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-02-15 11:25:07,516: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-02-15 11:25:07,521: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-02-15 11:25:07,522: INFO: common: created directory at: artifacts]\n",
+      "[2024-02-15 11:25:07,523: INFO: common: created directory at: artifacts/data_validation]\n"
      ]
     }
    ],
